<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Measure Me</string>
    <string name="action_settings">Settings</string>
    <string name="start_button">Start</string>
    <string name="help_button">Help</string>
    <string name="welcome">Welcome</string>
    <string name="not_yet">Feature not yet implemented.</string>
    <string name="take_picture">Take Picture</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="done">Done</string>

</resources>