<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/measure_calc_imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:cropToPadding="false"
            android:scaleType="centerInside" />

        <com.decSports.measureme.DotDrawView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/measure_calc_dotDrawView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/left_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/left"
            android:textSize="14sp" />

        <Button
            android:id="@+id/up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/up"
            android:textSize="14sp" />

        <Button
            android:id="@+id/down_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/down"
            android:textSize="14sp" />

        <Button
            android:id="@+id/right_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/right"
            android:textSize="14sp" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/done"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>